😬 Robbed the notebook

--- a/content/kactl.tex
+++ b/content/kactl.tex
@@ -2,9 +2,9 @@
 \usepackage{kactlpkg}
 \kactlcontentdir{content}
 
-\university{KTH}{KTH Royal Institute of Technology}{kth}
-\team{Omogen Heap}{Simon Lindholm, Johan Sannemo, Mårten Wiman}
-% \contest{ACM-ICPC World Finals 2017}{May 24, 2017}
+\university{KTH}{University of Haifa}{kth}
+\team{TopOfTheMountain}{Nir Adir, Noam Manaker Morag, Alon Krymbo}
+\contest{Southwestern Europe Regional Contest (SWERC) 2021-2022}{April 19, 2022}
 \contest{\ }{\today}
 % \enablecolors
 
