Added Dijkstra's algorithm

--- a/content/kactl.tex
+++ b/content/kactl.tex
@@ -2,7 +2,7 @@
 \usepackage{kactlpkg}
 \kactlcontentdir{content}
 
-\university{KTH}{University of Haifa}{kth}
+\university{Haifa}{University of Haifa}{kth}
 \team{TopOfTheMountain}{Nir Adir, Noam Manaker Morag, Alon Krymbo}
 \contest{Southwestern Europe Regional Contest (SWERC) 2021-2022}{April 19, 2022}
 \contest{\ }{\today}
