Added binary search and Haifa's template.

--- a/content/various/chapter.tex
+++ b/content/various/chapter.tex
@@ -6,6 +6,7 @@
 	\kactlimport{ConstantIntervals.h}
 
 \section{Misc. algorithms}
+	\kactlimport{BinarySearch.h}
 	\kactlimport{TernarySearch.h}
 	\kactlimport{LIS.h}
 	\kactlimport{FastKnapsack.h}
@@ -44,3 +45,6 @@
 	\kactlimport{BumpAllocatorSTL.h}
 	% \kactlimport{Unrolling.h}
 	\kactlimport{SIMD.h}
+
+\section{Haifa}
+	\kactlimport{haifatemplate.cpp}
