Added `Makefile`s and removed `SIMD`

--- a/content/various/chapter.tex
+++ b/content/various/chapter.tex
@@ -44,7 +44,7 @@
 	\kactlimport{SmallPtr.h}
 	\kactlimport{BumpAllocatorSTL.h}
 	% \kactlimport{Unrolling.h}
-	\kactlimport{SIMD.h}
+	% \kactlimport{SIMD.h}
 
 \section{Haifa}
-	\kactlimport{haifatemplate.cpp}
+	\kactlimport{haifatemplate.h}
