--- a/content/number-theory/chapter.tex
+++ b/content/number-theory/chapter.tex
@@ -44,6 +44,15 @@
 	Primitive roots exist modulo any prime power $p^a$, except for $p = 2, a > 2$, and there are $\phi(\phi(p^a))$ many.
 	For $p = 2, a > 2$, the group $\mathbb Z_{2^a}^\times$ is instead isomorphic to $\mathbb Z_2 \times \mathbb Z_{2^{a-2}}$.
 
+	All primes $p$ such that $p \in [0, 200]$:
+	2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53, 59, 61, 67, 71,
+	73, 79, 83, 89, 97, 101, 103, 107, 109, 113, 127, 131, 137, 139, 149, 151,
+	157, 163, 167, 173, 179, 181, 191, 193, 197, 199
+
+	All primes $p$ such that $p \in [1e9-200, 1e9+200]$:
+	1e9-117, 1e9-107, 1e9-71, 1e9-63, 1e9+7, 1e9+9, 1e9+21, 1e9+33, 1e9+87,
+	1e9+93, 1e9+97, 1e9+103, 1e9+123, 1e9+181
+
 \section{Estimates}
 	$\sum_{d|n} d = O(n \log \log n)$.
 
