--- a/content/kactl.tex
+++ b/content/kactl.tex
@@ -3,8 +3,8 @@
 \kactlcontentdir{content}
 
 \university{Haifa}{University of Haifa}{kth}
-\team{TopOfTheMountain}{Nir Adir, Noam Manaker Morag, Alon Krymbo}
-\contest{Southwestern Europe Regional Contest (SWERC) 2021-2022}{April 19, 2022}
+\team{TopOfTheMountain}{Yanir Edri, Alon Krymgand, Bar Vaisman}
+\contest{Southwestern Europe Regional Contest (SWERC) 2022-2023}{February 19, 2022}
 \contest{\ }{\today}
 % \enablecolors
 
