✏️ Renamed all KACTL -> HACTL

--- a/content/contest/chapter.tex
+++ b/content/contest/chapter.tex
@@ -1,7 +1,7 @@
 \chapter{Contest}
 
-\kactlimport[-l rawcpp]{kthtemplate.cpp}
-\kactlimport[-l sh]{.bashrc}
-\kactlimport[-l raw]{.vimrc}
-\kactlimport[-l raw]{hash.sh}
-\kactlimport[-l raw]{troubleshoot.txt}
+\hactlimport[-l rawcpp]{kthtemplate.cpp}
+\hactlimport[-l sh]{.bashrc}
+\hactlimport[-l raw]{.vimrc}
+\hactlimport[-l raw]{hash.sh}
+\hactlimport[-l raw]{troubleshoot.txt}
