--- a/content/data-structures/chapter.tex
+++ b/content/data-structures/chapter.tex
@@ -1,16 +1,16 @@
 \chapter{Data structures}
 
-\kactlimport{OrderStatisticTree.h}
-\kactlimport{HashMap.h}
-\kactlimport{SegmentTree.h}
-\kactlimport{LazySegmentTree.h}
-% \kactlimport{UnionFind.h}
-\kactlimport{UnionFindRollback.h}
-\kactlimport{SubMatrix.h}
-\kactlimport{Matrix.h}
-\kactlimport{LineContainer.h}
-\kactlimport{Treap.h}
-\kactlimport{FenwickTree.h}
-\kactlimport{FenwickTree2d.h}
-\kactlimport{RMQ.h}
-\kactlimport{MoQueries.h}
+\hactlimport{OrderStatisticTree.h}
+\hactlimport{HashMap.h}
+\hactlimport{SegmentTree.h}
+\hactlimport{LazySegmentTree.h}
+% \hactlimport{UnionFind.h}
+\hactlimport{UnionFindRollback.h}
+\hactlimport{SubMatrix.h}
+\hactlimport{Matrix.h}
+\hactlimport{LineContainer.h}
+\hactlimport{Treap.h}
+\hactlimport{FenwickTree.h}
+\hactlimport{FenwickTree2d.h}
+\hactlimport{RMQ.h}
+\hactlimport{MoQueries.h}
