--- a/content/geometry/chapter.tex
+++ b/content/geometry/chapter.tex
@@ -1,45 +1,45 @@
 \chapter{Geometry}
 
 \section{Geometric primitives}
-	\kactlimport{Point.h}
-	\kactlimport{lineDistance.h}
-	\kactlimport{SegmentDistance.h}
-	\kactlimport{SegmentIntersection.h}
-	\kactlimport{lineIntersection.h}
-	\kactlimport{sideOf.h}
-	\kactlimport{OnSegment.h}
-	\kactlimport{linearTransformation.h}
-	% \kactlimport{LineProjectionReflection.h}
-	\kactlimport{Angle.h}
+	\hactlimport{Point.h}
+	\hactlimport{lineDistance.h}
+	\hactlimport{SegmentDistance.h}
+	\hactlimport{SegmentIntersection.h}
+	\hactlimport{lineIntersection.h}
+	\hactlimport{sideOf.h}
+	\hactlimport{OnSegment.h}
+	\hactlimport{linearTransformation.h}
+	% \hactlimport{LineProjectionReflection.h}
+	\hactlimport{Angle.h}
 
 \section{Circles}
-	\kactlimport{CircleIntersection.h}
-	\kactlimport{CircleTangents.h}
-	% \kactlimport{CircleLine.h}
-	\kactlimport{CirclePolygonIntersection.h}
-	\kactlimport{circumcircle.h}
-	\kactlimport{MinimumEnclosingCircle.h}
+	\hactlimport{CircleIntersection.h}
+	\hactlimport{CircleTangents.h}
+	% \hactlimport{CircleLine.h}
+	\hactlimport{CirclePolygonIntersection.h}
+	\hactlimport{circumcircle.h}
+	\hactlimport{MinimumEnclosingCircle.h}
 
 \section{Polygons}
-	\kactlimport{InsidePolygon.h}
-	\kactlimport{PolygonArea.h}
-	\kactlimport{PolygonCenter.h}
-	\kactlimport{PolygonCut.h}
-	% \kactlimport{PolygonUnion.h}
-	\kactlimport{ConvexHull.h}
-	\kactlimport{HullDiameter.h}
-	\kactlimport{PointInsideHull.h}
-	\kactlimport{LineHullIntersection.h}
+	\hactlimport{InsidePolygon.h}
+	\hactlimport{PolygonArea.h}
+	\hactlimport{PolygonCenter.h}
+	\hactlimport{PolygonCut.h}
+	% \hactlimport{PolygonUnion.h}
+	\hactlimport{ConvexHull.h}
+	\hactlimport{HullDiameter.h}
+	\hactlimport{PointInsideHull.h}
+	\hactlimport{LineHullIntersection.h}
 
 \section{Misc. Point Set Problems}
-	\kactlimport{ClosestPair.h}
-	% \kactlimport{ManhattanMST.h}
-	\kactlimport{kdTree.h}
-	% \kactlimport{DelaunayTriangulation.h}
-	\kactlimport{FastDelaunay.h}
+	\hactlimport{ClosestPair.h}
+	% \hactlimport{ManhattanMST.h}
+	\hactlimport{kdTree.h}
+	% \hactlimport{DelaunayTriangulation.h}
+	\hactlimport{FastDelaunay.h}
 
 \section{3D}
-	\kactlimport{PolyhedronVolume.h}
-	\kactlimport{Point3D.h}
-	\kactlimport{3dHull.h}
-	\kactlimport{sphericalDistance.h}
+	\hactlimport{PolyhedronVolume.h}
+	\hactlimport{Point3D.h}
+	\hactlimport{3dHull.h}
+	\hactlimport{sphericalDistance.h}
