--- a/content/graph/chapter.tex
+++ b/content/graph/chapter.tex
@@ -1,48 +1,48 @@
 \chapter{Graph}
 
 \section{Fundamentals}
-	\kactlimport{Dijkstra.h}
-	\kactlimport{BellmanFord.h}
-	\kactlimport{FloydWarshall.h}
-	\kactlimport{TopoSort.h}
+	\hactlimport{Dijkstra.h}
+	\hactlimport{BellmanFord.h}
+	\hactlimport{FloydWarshall.h}
+	\hactlimport{TopoSort.h}
 
 \section{Network flow}
-	\kactlimport{PushRelabel.h}
-	\kactlimport{MinCostMaxFlow.h}
-	\kactlimport{EdmondsKarp.h}
-	% \kactlimport{Dinic.h}
-	\kactlimport{MinCut.h}
-	\kactlimport{GlobalMinCut.h}
-	\kactlimport{GomoryHu.h}
+	\hactlimport{PushRelabel.h}
+	\hactlimport{MinCostMaxFlow.h}
+	\hactlimport{EdmondsKarp.h}
+	% \hactlimport{Dinic.h}
+	\hactlimport{MinCut.h}
+	\hactlimport{GlobalMinCut.h}
+	\hactlimport{GomoryHu.h}
 
 \section{Matching}
-	\kactlimport{hopcroftKarp.h}
-	\kactlimport{DFSMatching.h}
-	\kactlimport{MinimumVertexCover.h}
-	\kactlimport{WeightedMatching.h}
-	\kactlimport{GeneralMatching.h}
+	\hactlimport{hopcroftKarp.h}
+	\hactlimport{DFSMatching.h}
+	\hactlimport{MinimumVertexCover.h}
+	\hactlimport{WeightedMatching.h}
+	\hactlimport{GeneralMatching.h}
 
 \section{DFS algorithms}
-	\kactlimport{SCC.h}
-	\kactlimport{BiconnectedComponents.h}
-	\kactlimport{2sat.h}
-	\kactlimport{EulerWalk.h}
+	\hactlimport{SCC.h}
+	\hactlimport{BiconnectedComponents.h}
+	\hactlimport{2sat.h}
+	\hactlimport{EulerWalk.h}
 
 \section{Coloring}
-	\kactlimport{EdgeColoring.h}
+	\hactlimport{EdgeColoring.h}
 
 \section{Heuristics}
-	\kactlimport{MaximalCliques.h}
-	\kactlimport{MaximumClique.h}
-	\kactlimport{MaximumIndependentSet.h}
+	\hactlimport{MaximalCliques.h}
+	\hactlimport{MaximumClique.h}
+	\hactlimport{MaximumIndependentSet.h}
 
 \section{Trees}
-	\kactlimport{BinaryLifting.h}
-	\kactlimport{LCA.h}
-	\kactlimport{CompressTree.h}
-	\kactlimport{HLD.h}
-	\kactlimport{LinkCutTree.h}
-	\kactlimport{DirectedMST.h}
+	\hactlimport{BinaryLifting.h}
+	\hactlimport{LCA.h}
+	\hactlimport{CompressTree.h}
+	\hactlimport{HLD.h}
+	\hactlimport{LinkCutTree.h}
+	\hactlimport{DirectedMST.h}
 
 \section{Math}
 	\subsection{Number of Spanning Trees}
