--- a/content/kactl.tex
+++ b/content/kactl.tex
@@ -1,6 +1,6 @@
 \documentclass[9pt, a4paper, notitlepage]{extreport}
-\usepackage{kactlpkg}
-\kactlcontentdir{content}
+\usepackage{hactlpkg}
+\hactlcontentdir{content}
 
 \university{Haifa}{University of Haifa}{kth}
 \team{TopOfTheMountain}{Yanir Edri, Alon Krymgand, Bar Vaisman}
@@ -10,7 +10,7 @@
 
 \begin{document}
 	\maketeampage
-	% Small KACTL header on the first page:
+	% Small HACTL header on the first page:
 	% \maketitle{``One Last Time'' Edition}{\today}
 	\begin{multicols*}{3}
 	\thispagestyle{fancy}
@@ -18,19 +18,19 @@
 	\setcounter{tocdepth}{0}
 	\tableofcontents
 
-	\kactlchapter{contest}
-	\kactlchapter{math}
-	\kactlchapter{data-structures}
-	\kactlchapter{numerical}
-	\kactlchapter{number-theory}
-	\kactlchapter{combinatorial}
-	\kactlchapter{graph}
-	\kactlchapter{geometry}
-	\kactlchapter{strings}
-	\kactlchapter{various}
+	\hactlchapter{contest}
+	\hactlchapter{math}
+	\hactlchapter{data-structures}
+	\hactlchapter{numerical}
+	\hactlchapter{number-theory}
+	\hactlchapter{combinatorial}
+	\hactlchapter{graph}
+	\hactlchapter{geometry}
+	\hactlchapter{strings}
+	\hactlchapter{various}
 	\end{multicols*}
 
 	\begin{multicols*}{3}
-	\kactlchapter{appendix}
+	\hactlchapter{appendix}
 	\end{multicols*}
 \end{document}
