--- a/content/math/chapter.tex
+++ b/content/math/chapter.tex
@@ -1,5 +1,5 @@
 % Written by Anders Sjoqvist and Ulf Lundstrom, 2009
-% The main sources are: tinyKACTL, Beta and Wikipedia
+% The main sources are: tinyHACTL, Beta and Wikipedia
 
 \chapter{Mathematics}
 
