--- a/content/numerical/chapter.tex
+++ b/content/numerical/chapter.tex
@@ -1,31 +1,31 @@
 \chapter{Numerical}
 
 \section{Polynomials and recurrences}
-  \kactlimport{Polynomial.h}
-  \kactlimport{PolyRoots.h}
-  \kactlimport{PolyInterpolate.h}
-  \kactlimport{BerlekampMassey.h}
-  \kactlimport{LinearRecurrence.h}
+  \hactlimport{Polynomial.h}
+  \hactlimport{PolyRoots.h}
+  \hactlimport{PolyInterpolate.h}
+  \hactlimport{BerlekampMassey.h}
+  \hactlimport{LinearRecurrence.h}
 
 \section{Optimization}
-  \kactlimport{GoldenSectionSearch.h}
-  \kactlimport{HillClimbing.h}
-  \kactlimport{Integrate.h}
-  \kactlimport{IntegrateAdaptive.h}
-  \kactlimport{Simplex.h}
+  \hactlimport{GoldenSectionSearch.h}
+  \hactlimport{HillClimbing.h}
+  \hactlimport{Integrate.h}
+  \hactlimport{IntegrateAdaptive.h}
+  \hactlimport{Simplex.h}
 
 \section{Matrices}
-  \kactlimport{Determinant.h}
-  \kactlimport{IntDeterminant.h}
-  \kactlimport{SolveLinear.h}
-  \kactlimport{SolveLinear2.h}
-  \kactlimport{SolveLinearBinary.h}
-  \kactlimport{MatrixInverse.h}
-  % \kactlimport{MatrixInverse-mod.h}
-  \kactlimport{Tridiagonal.h}
+  \hactlimport{Determinant.h}
+  \hactlimport{IntDeterminant.h}
+  \hactlimport{SolveLinear.h}
+  \hactlimport{SolveLinear2.h}
+  \hactlimport{SolveLinearBinary.h}
+  \hactlimport{MatrixInverse.h}
+  % \hactlimport{MatrixInverse-mod.h}
+  \hactlimport{Tridiagonal.h}
 
 \section{Fourier transforms}
-	\kactlimport{FastFourierTransform.h}
-	\kactlimport{FastFourierTransformMod.h}
-	\kactlimport{NumberTheoreticTransform.h}
-	\kactlimport{FastSubsetTransform.h}
+	\hactlimport{FastFourierTransform.h}
+	\hactlimport{FastFourierTransformMod.h}
+	\hactlimport{NumberTheoreticTransform.h}
+	\hactlimport{FastSubsetTransform.h}
