--- a/content/strings/chapter.tex
+++ b/content/strings/chapter.tex
@@ -1,10 +1,10 @@
 \chapter{Strings}
 
-\kactlimport{KMP.h}
-\kactlimport{Zfunc.h}
-\kactlimport{Manacher.h}
-\kactlimport{MinRotation.h}
-\kactlimport{SuffixArray.h}
-\kactlimport{SuffixTree.h}
-\kactlimport{Hashing.h}
-\kactlimport{AhoCorasick.h}
+\hactlimport{KMP.h}
+\hactlimport{Zfunc.h}
+\hactlimport{Manacher.h}
+\hactlimport{MinRotation.h}
+\hactlimport{SuffixArray.h}
+\hactlimport{SuffixTree.h}
+\hactlimport{Hashing.h}
+\hactlimport{AhoCorasick.h}
