--- a/content/various/chapter.tex
+++ b/content/various/chapter.tex
@@ -1,19 +1,19 @@
 \chapter{Various}
 
 \section{Intervals}
-	\kactlimport{IntervalContainer.h}
-	\kactlimport{IntervalCover.h}
-	\kactlimport{ConstantIntervals.h}
+	\hactlimport{IntervalContainer.h}
+	\hactlimport{IntervalCover.h}
+	\hactlimport{ConstantIntervals.h}
 
 \section{Misc. algorithms}
-	\kactlimport{BinarySearch.h}
-	\kactlimport{TernarySearch.h}
-	\kactlimport{LIS.h}
-	\kactlimport{FastKnapsack.h}
+	\hactlimport{BinarySearch.h}
+	\hactlimport{TernarySearch.h}
+	\hactlimport{LIS.h}
+	\hactlimport{FastKnapsack.h}
 
 \section{Dynamic programming}
-	\kactlimport{KnuthDP.h}
-	\kactlimport{DivideAndConquerDP.h}
+	\hactlimport{KnuthDP.h}
+	\hactlimport{DivideAndConquerDP.h}
 
 \section{Debugging tricks}
 	\begin{itemize}
@@ -38,15 +38,15 @@
 			\item \lstinline{#pragma GCC target ("avx2")} can double performance of vectorized code, but causes crashes on old machines.
 			\item \lstinline{#pragma GCC optimize ("trapv")} kills the program on integer overflows (but is really slow).
 		\end{itemize}
-	\kactlimport{FastMod.h}
-	\kactlimport{FastInput.h}
-	\kactlimport{BumpAllocator.h}
-	\kactlimport{SmallPtr.h}
-	\kactlimport{BumpAllocatorSTL.h}
-	% \kactlimport{Unrolling.h}
-	% \kactlimport{SIMD.h}
+	\hactlimport{FastMod.h}
+	\hactlimport{FastInput.h}
+	\hactlimport{BumpAllocator.h}
+	\hactlimport{SmallPtr.h}
+	\hactlimport{BumpAllocatorSTL.h}
+	% \hactlimport{Unrolling.h}
+	% \hactlimport{SIMD.h}
 
 \section{Haifa}
-	\kactlimport{haifatemplate.h}
-	\kactlimport[-l raw]{Makefile}
-	\kactlimport[-l raw]{CMakeLists.txt}
+	\hactlimport{haifatemplate.h}
+	\hactlimport[-l raw]{Makefile}
+	\hactlimport[-l raw]{CMakeLists.txt}
