--- a/content/test-session/test-session.tex
+++ b/content/test-session/test-session.tex
@@ -1,11 +1,11 @@
 \documentclass[10pt, a4paper, notitlepage]{report}
-\usepackage{kactlpkg}
-\kactlcontentdir{content}
+\usepackage{hactlpkg}
+\hactlcontentdir{content}
 
 \university{KTH}{}{}
 
 \begin{document}
 	\begin{multicols*}{3}
-	\kactlchapter{test-session}
+	\hactlchapter{test-session}
 	\end{multicols*}
 \end{document}
