--- a/doc/modmul-proof.tex
+++ b/doc/modmul-proof.tex
@@ -7,7 +7,7 @@
 \lstset{basicstyle=\scriptsize\ttfamily}
 \lstset{commentstyle=\normalfont\itshape}
 
-\title{Correctness of KACTL's modmul}
+\title{Correctness of HACTL's modmul}
 \author{Simon Lindholm}
 \date{2020-05-02}
 
@@ -17,7 +17,7 @@
 
 \section{Introduction}
 
-Within computational number theory, and for hashing, there is sometimes a need to compute modular multiplications $a \cdot b \pmod{c}$ for relatively large $c$, in particular larger than $2^{32}$. KACTL contains the following algorithm for computing this for $0 \le a, b \le c < 7.268\cdot 10^{18}$: \footnote{this number equals $r \cdot 2^{64}$, where $r = (\sqrt{177} - 7) / 16 \approx 0.394$ is the positive solution to the equation $8x^2 + 7x = 4$.}
+Within computational number theory, and for hashing, there is sometimes a need to compute modular multiplications $a \cdot b \pmod{c}$ for relatively large $c$, in particular larger than $2^{32}$. HACTL contains the following algorithm for computing this for $0 \le a, b \le c < 7.268\cdot 10^{18}$: \footnote{this number equals $r \cdot 2^{64}$, where $r = (\sqrt{177} - 7) / 16 \approx 0.394$ is the positive solution to the equation $8x^2 + 7x = 4$.}
 
 \begin{lstlisting}[language=C++]
 typedef int64_t ll;
@@ -33,7 +33,7 @@ It assumes an x86 or x86\_64 processor with long doubles compiled to use 80-bit 
 and runs about 2 times faster than the naive expression \lstinline{(__int128_t)a * b % c}.
 This paper shows why it works.
 
-On a historical note, an earlier version of KACTL included the same algorithm but with the slightly modified expression \texttt{ull((long double)a * b / c)}. This can be shown precise all the way up to $c < 2^{63}$; however, it is slightly longer and slightly slower in the common case of performing several modular multiplications with the same $c$, due to the division.
+On a historical note, an earlier version of HACTL included the same algorithm but with the slightly modified expression \texttt{ull((long double)a * b / c)}. This can be shown precise all the way up to $c < 2^{63}$; however, it is slightly longer and slightly slower in the common case of performing several modular multiplications with the same $c$, due to the division.
 
 \section{The basic idea}
 
