Added Manhattan and some geometry, removed Dijkstra, Moved BiConnectedComponents.h message to description, removed page break before appendix.

--- a/content/geometry/chapter.tex
+++ b/content/geometry/chapter.tex
@@ -15,7 +15,7 @@
 \section{Circles}
 	\hactlimport{CircleIntersection.h}
 	\hactlimport{CircleTangents.h}
-	% \hactlimport{CircleLine.h}
+	\hactlimport{CircleLine.h}
 	\hactlimport{CirclePolygonIntersection.h}
 	\hactlimport{circumcircle.h}
 	\hactlimport{MinimumEnclosingCircle.h}
@@ -33,7 +33,7 @@
 
 \section{Misc. Point Set Problems}
 	\hactlimport{ClosestPair.h}
-	% \hactlimport{ManhattanMST.h}
+	\hactlimport{ManhattanMST.h}
 	\hactlimport{kdTree.h}
 	% \hactlimport{DelaunayTriangulation.h}
 	\hactlimport{FastDelaunay.h}
