--- a/content/graph/chapter.tex
+++ b/content/graph/chapter.tex
@@ -1,7 +1,7 @@
 \chapter{Graph}
 
 \section{Fundamentals}
-	\hactlimport{Dijkstra.h}
+	% \hactlimport{Dijkstra.h}
 	\hactlimport{BellmanFord.h}
 	\hactlimport{FloydWarshall.h}
 	\hactlimport{TopoSort.h}
