--- a/content/hactl.tex
+++ b/content/hactl.tex
@@ -2,9 +2,8 @@
 \usepackage{hactlpkg}
 \hactlcontentdir{content}
 
-\university{Haifa}{University of Haifa}{kth}
-\team{TopOfTheMountain}{Yanir Edri, Alon Krymgand, Bar Vaisman}
-\contest{Southwestern Europe Regional Contest (SWERC) 2022-2023}{February 19, 2022}
+\university{Haifa}{University of Haifa}{uof}
+\team{TopOfTheMountain}{Alon Krymgand, Bar Vaisman, Tomer Hambra}
 \contest{\ }{\today}
 % \enablecolors
 
