--- a/content/hactl.tex
+++ b/content/hactl.tex
@@ -2,7 +2,7 @@
 \usepackage{hactlpkg}
 \hactlcontentdir{content}
 
-\university{Haifa}{University of Haifa}{uof}
+\university{Haifa}{University of Haifa}{kth}
 \team{TopOfTheMountain}{Alon Krymgand, Bar Vaisman, Tomer Hambra}
 \contest{\ }{\today}
 % \enablecolors
