--- a/content/hactl.tex
+++ b/content/hactl.tex
@@ -3,7 +3,7 @@
 \hactlcontentdir{content}
 
 \university{Haifa}{University of Haifa}{kth}
-\team{TopOfTheMountain}{Alon Krymgand, Bar Vaisman, Tomer Hambra}
+\team{TopOfTheMountain}{Bar Vaisman, Nameer Ballan, Tomer Hambra}
 \contest{\ }{\today}
 % \enablecolors
 
@@ -24,8 +24,8 @@
 	\hactlchapter{number-theory}
 	\hactlchapter{combinatorial}
 	\hactlchapter{graph}
-	\hactlchapter{geometry}
 	\hactlchapter{strings}
+	\hactlchapter{geometry}
 	\hactlchapter{various}
 	\hactlchapter{appendix}
 	\end{multicols*}
